# optimization

./: .gitignore  CMakeLists.txt  DRIVER_CODE.cpp  main.cpp  matrix.cpp  matrix.h  ode_solver.cpp  ode_solver.h  opt_alg.cpp  opt_alg.h  solution.cpp  user_funs.cpp  user_funs.h
Laboratory 1/: main.cpp
classes/: matrix.cpp  ode_solver.cpp  opt_alg.cpp  solution.cpp  user_funs.cpp
libs/: matrix.h  opt_alg.h  solution.h  user_funs.h
